crates/oracledb/tests/trybuild/fail/invalid_field_attr.rs
use oracledb::FromRow;

#[derive(FromRow)]
struct Row {
    #[oracledb(foo = "ID")]
    id: i64,
}

fn main() {}
